--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,13 @@
 ---
 import Logo from "./Logo.astro";
 import Navbar from "./Navbar.astro";
-
 ---
 
-<header class="max-h-fit md:max-h-1/6 sm:sticky top-0 flex h-fit w-full flex-row flex-wrap items-center justify-center sm:justify-between sm:landscape:pr-16 bg-primary/80 py-6 px-10 text-white z-50">
-<Logo className="md:max-h-12 max-h-10 w-fit shrink"/>
-<Navbar />
+<header
+  class="max-h-fit md:max-h-1/6 sm:sticky top-0 flex h-fit w-full flex-row flex-wrap items-center justify-center sm:justify-between sm:landscape:pr-16 bg-primary/80 py-6 px-10 text-white z-50"
+>
+  <Logo className="md:max-h-12 max-h-10 w-fit shrink" />
+  <Navbar />
 </header>
 
 <style>
