--- a/src/components/PamatkyGridSingle.astro
+++ b/src/components/PamatkyGridSingle.astro
@@ -2,29 +2,67 @@
 import { Image } from "@astrojs/image/components";
 import BlobSingle from "./BlobSingle.astro";
 
-const trasaA = (await Astro.glob('../pages/pamatky/trasa-a/*.mdx')).sort(
-    (a, b) => new Number(a.frontmatter.id).valueOf() - new Number(b.frontmatter.id).valueOf()
-    );
-
+const trasaA = (await Astro.glob("../pages/pamatky/trasa-a/*.md")).sort(
+  (a, b) =>
+    new Number(a.frontmatter.id).valueOf() -
+    new Number(b.frontmatter.id).valueOf()
+);
 ---
 
-<ul aria-label="Seznam památek v trase A"  class="flex flex-wrap flex-auto items-stretch justify-evenly transition-all ease-in-out mt-3">
-  {trasaA.map(pamatka =>(
-    <li aria-label={`Památka číslo ${pamatka.frontmatter.id} - ${pamatka.frontmatter.title}`} id={`${pamatka.frontmatter.trasa}-${pamatka.frontmatter.id}`} class="flex bg-secondary text-[#313131] items-start justify-evenly md:flex-row flex-col-reverse sm:landscape:flex-row flex-nowrap sm:landscape:space-x-5 md:space-x-7 md:space-y-0 px-4 md:px-7 py-3 rounded-md md:items-start md:justify-start flex-auto md:basis-full lg:basis-1/3 md:text-justify m-3 scroll-m-28 drop-shadow-md">
-      <div aria-hidden="true" id="idBlob" class="hidden md:block md:absolute md:scale-[30%] md:-translate-y-[40%] md:-translate-x-[45%] -rotate-12 z-50">
-        <BlobSingle id={pamatka.frontmatter.id} className="transition-all" />
-      </div>
-      {pamatka.frontmatter.image &&
-        <Image aria-hidden={"true"} class="md:w-[75%] place-self-center sm:landscape:max-w-[50%] rounded-md drop-shadow-md" src={import (`../assets/img/pamatky/${pamatka.frontmatter.image}.jpg`)} alt={pamatka.frontmatter.title} format={"webp"} /> }
-        <div class="flex flex-col flex-wrap justify-start items-start">
+<ul
+  aria-label="Seznam památek v trase A"
+  class="flex flex-wrap flex-shrink items-stretch justify-evenly transition-all ease-in-out mt-3"
+>
+  {
+    trasaA.map((pamatka) => (
+      <li
+        aria-label={`Památka číslo ${pamatka.frontmatter.id} - ${pamatka.frontmatter.title}`}
+        id={`${pamatka.frontmatter.id}`}
+        class="m-3 flex flex-auto scroll-m-28 flex-col flex-wrap items-start justify-start rounded-md bg-secondary p-0 text-[#313131] drop-shadow-md md:space-y-0 md:text-justify lg:basis-1/3"
+      >
+        <div
+          aria-hidden="true"
+          id="idBlob"
+          class="z-50 hidden -rotate-12 md:absolute md:block md:-translate-y-[40%] md:-translate-x-[45%] md:scale-[30%]"
+        >
+          <BlobSingle id={pamatka.frontmatter.id} className="transition-all" />
+        </div>
+        {pamatka.frontmatter.frontImage && (
+          <Image
+            aria-hidden={"true"}
+            class="rounded-md md:max-w-full"
+            src={import(
+              `../assets/img/pamatky/${pamatka.frontmatter.frontImage}.jpg`
+            )}
+            alt={pamatka.frontmatter.title}
+            format={"webp"}
+          />
+        )}
+        <div class="flex flex-col flex-nowrap items-start justify-end px-4 py-3">
           <a aria-hidden="true" href={pamatka.url} rel="prefetch">
-            <h3 class="font-bold text-primary bg-tertiary px-4 py-3 leading-relaxed text-left rounded-md"><span class="text-3xl md:hidden">{pamatka.frontmatter.id}.&nbsp;</span>{pamatka.frontmatter.title}</h3>
+            <h3 class="rounded-md bg-tertiary px-4 py-3 text-left font-bold leading-relaxed text-primary">
+              <span class="text-3xl md:hidden">
+                {pamatka.frontmatter.id}.&nbsp;
+              </span>
+              {pamatka.frontmatter.title}
+            </h3>
           </a>
 
-          <p class="text-sm text-slate-900/60 mt-3 font-bold">{pamatka.frontmatter.address}</p>
-          <p aria-hidden="true" class="my-3 max-w-2xl">{pamatka.frontmatter.excerpt}</p>
-          <a class="btn my-3" href={pamatka.url} rel="prefetch">Zobrazit památku</a>
+          <p class="mt-3 text-sm font-bold text-slate-900/60">
+            {pamatka.frontmatter.address}
+          </p>
+          <p aria-hidden="true" class="my-3 max-w-2xl">
+            {pamatka.frontmatter.excerpt}
+          </p>
+          <a
+            class="btn btn-accent my-3 justify-self-end"
+            href={pamatka.url}
+            rel="prefetch"
+          >
+            Zobrazit památku
+          </a>
         </div>
-     </li>
-  ))}
+      </li>
+    ))
+  }
 </ul>
