--- a/src/components/PamatkyGridSingle.astro
+++ b/src/components/PamatkyGridSingle.astro
@@ -36,6 +36,7 @@ const trasaA = (await Astro.glob("../pages/pamatky/trasa-a/*.md")).sort(
             )}
             alt={pamatka.frontmatter.title}
             format={"webp"}
+            width={1000}
           />
         )}
         <div class="flex flex-col flex-nowrap items-start justify-end px-4 py-3">
