--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,14 +4,10 @@ import Navbar from "./Navbar.astro";
 ---
 
 <header
-  class="max-h-fit md:max-h-1/6 sm:sticky top-0 flex h-fit w-full flex-row flex-wrap items-center justify-center sm:justify-between sm:landscape:pr-16 bg-primary/80 py-6 px-10 text-white z-50"
+  class="navbar sm:flex-row flex-col justify-center sm:justify-between flex-wrap max-h-fit sm:sticky top-0 bg-primary/70 py-6 px-10 text-white z-50 w-full"
 >
   <Logo className="md:max-h-12 max-h-10 w-fit shrink" />
   <Navbar />
 </header>
 
-<style>
-  header {
-    background: url();
-  }
-</style>
+<style></style>
