Added modal window, ammendments

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import Navbar from "./Navbar.astro";
 ---
 
 <header
-  class="navbar sm:flex-row flex-col justify-center sm:justify-between flex-wrap max-h-fit sm:sticky top-0 bg-primary/70 py-6 px-10 text-white z-50 w-full"
+  class="navbar sm:flex-row flex-col justify-center sm:justify-between flex-wrap max-h-fit sm:sticky top-0 bg-base-100/20 sm:bg-primary/70 py-6 px-10 text-white z-50 w-full"
 >
   <Logo className="md:max-h-12 max-h-10 w-fit shrink" />
   <Navbar />
