--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -11,7 +11,7 @@ const { className } = Astro.props;
     <svg
       aria-hidden="true"
       id="logo"
-      class={className}
+      class={`${className}`}
       xmlns="http://www.w3.org/2000/svg"
       xml:space="preserve"
       width="1949px"
@@ -32,7 +32,6 @@ const { className } = Astro.props;
         </style>
       </defs>
       <g id="PbLogo">
-        <metadata id="CorelCorpID_0Corel-Layer"></metadata>
         <g id="PbLogo_0">
           <g id="toInvert">
             <path
