--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -34,11 +34,14 @@ const currentPath = pathname.slice(1);
 >
 
 <input type="checkbox" id="mobile-menu" class="modal-toggle sm:hidden" />
-<label for="mobile-menu" class="modal cursor-pointer bg-base-100/80 sm:hidden">
+<label
+  for="mobile-menu"
+  class="modal cursor-pointer bg-base-100/80 sm:hidden transition-all ease-in-out overflow-y-hidden"
+>
   <nav
     aria-label="Navigační menu"
     id="menu"
-    class="menu menu-vertical space-y-5 sm:hidden w-4/5"
+    class="menu menu-vertical space-y-5 sm:hidden w-4/5 transition-all ease-in-out"
   >
     <a
       class={`${currentPath === "" ? "active " : "inactive"} btn btn-primary`}
