--- a/src/pages/o-projektu.astro
+++ b/src/pages/o-projektu.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
+import Logo from "../components/Logo.astro";
 
 const description = "O projektu";
 ---
@@ -51,4 +52,8 @@ const description = "O projektu";
   </Card>
 </Layout>
 
-<style></style>
+<style>
+  #logo.fil0 {
+    @apply fill-primary;
+  }
+</style>
