--- a/src/components/PamatkyGridSingle.astro
+++ b/src/components/PamatkyGridSingle.astro
@@ -11,14 +11,14 @@ const trasaA = (await Astro.glob("../pages/pamatky/trasa-a/*.md")).sort(
 
 <ul
   aria-label="Seznam památek v trase A"
-  class="flex flex-wrap flex-shrink items-stretch justify-evenly transition-all ease-in-out mt-3"
+  class="columns-1 md:columns-2 transition-all ease-in-out mt-3 gap-10"
 >
   {
     trasaA.map((pamatka) => (
       <li
         aria-label={`Památka číslo ${pamatka.frontmatter.id} - ${pamatka.frontmatter.title}`}
         id={`${pamatka.frontmatter.id}`}
-        class="m-3 flex flex-auto scroll-m-28 flex-col flex-wrap items-start justify-start rounded-md bg-secondary p-0 text-[#313131] drop-shadow-md md:space-y-0 md:text-justify lg:basis-1/3"
+        class="m-3 flex flex-auto scroll-m-28 flex-col flex-wrap items-start justify-start rounded-md bg-secondary p-0 text-[#313131] drop-shadow-md md:space-y-0 md:text-justify"
       >
         <div
           aria-hidden="true"
@@ -36,7 +36,7 @@ const trasaA = (await Astro.glob("../pages/pamatky/trasa-a/*.md")).sort(
             )}
             alt={pamatka.frontmatter.title}
             format={"webp"}
-            width={1000}
+            width={750}
           />
         )}
         <div class="flex flex-col flex-nowrap items-start justify-end px-4 py-3">
